Make sure content doesn't overflow the whistle content container.

--- a/css/whistles.css
+++ b/css/whistles.css
@@ -20,6 +20,10 @@
 			cursor: pointer;
 }
 
+.whistle-content {
+	overflow: hidden;
+}
+
 /**
  * Tabs
  */
